# change-order-copilot

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: Home.py  styles.py  ui_components.py
app/pages/: 1_Document_Intake.py  2_Portfolio_Dashboard.py  3_CO_Analysis.py  4_Compliance_Checker.py  5_AI_Review_Memo.py  6_Reports_Export.py
data/: gold_standard.json  project_meta.yaml
data/change_orders/: CO-001.md  CO-002.md  CO-003.md  CO-004.txt  CO-005.md  CO-006.md  CO-007.md  CO-008.txt  CO-009.md  CO-010.md  CO-011.md  CO-012.md  CO-013.md  CO-014.txt  CO-015.md  CO-016.md  CO-017.md  CO-018.txt
data/contract/clauses/: 04_07_differing_conditions.md  08_04_extension_of_time.md  08_05_concurrent_delay.md  08_06_acceleration.md  08_07_liquidated_damages.md  13_02_scope_addition.md  13_04_omission.md  (+8 more)
docs/: CANONICAL_SCHEMA.md  CODE_WALKTHROUGH.md  DOMAIN_PRIMER.md  NLP_LLM_METHODOLOGY.md  QA_PREP.md  SYSTEM_NOTES.md  UI_GUIDE.md
src/co_copilot/: __init__.py  analytics.py  clause_library.py  compliance.py  config.py  document_loader.py  evaluation.py  exceptions.py  extractor.py  llm_layer.py  logging_config.py  mapping.py  models.py  parsing.py  pipeline.py  prompts.py  report_export.py  security.py  storage.py  validation.py
tests/: conftest.py  test_analytics.py  test_app_smoke.py  test_compliance.py  test_extractor.py  test_llm_layer.py  test_loader.py  test_report_export.py  test_storage_pipeline.py  test_validation.py
